syntax = "proto3";

package users;

// ========== UTILISATEUR SERVICE ==========
service UtilisateurService {
  rpc Create(CreateUtilisateurRequest) returns (Utilisateur);
  rpc Update(UpdateUtilisateurRequest) returns (Utilisateur);
  rpc Get(GetUtilisateurRequest) returns (Utilisateur);
  rpc GetByKeycloakId(GetByKeycloakIdRequest) returns (Utilisateur);
  rpc GetByEmail(GetByEmailRequest) returns (Utilisateur);
  rpc List(ListUtilisateurRequest) returns (ListUtilisateurResponse);
  rpc Delete(DeleteUtilisateurRequest) returns (DeleteResponse);
  rpc GetProfile(GetProfileRequest) returns (UserProfile);
}

message Utilisateur {
  string id = 1;
  string keycloak_id = 2;
  string nom = 3;
  string prenom = 4;
  string email = 5;
  string telephone = 6;
  bool actif = 7;
  string created_at = 8;
  string updated_at = 9;
}

message UserProfile {
  Utilisateur utilisateur = 1;
  repeated UserOrganisation organisations = 2;
  bool has_organisation = 3;
}

message UserOrganisation {
  string organisation_id = 1;
  string organisation_nom = 2;
  UserRole role = 3;
  string etat = 4;
}

message UserRole {
  string id = 1;
  string code = 2;
  string nom = 3;
}

message CreateUtilisateurRequest {
  string keycloak_id = 1;
  string nom = 2;
  string prenom = 3;
  string email = 4;
  string telephone = 5;
  bool actif = 6;
}

message UpdateUtilisateurRequest {
  string id = 1;
  string nom = 2;
  string prenom = 3;
  string email = 4;
  string telephone = 5;
  bool actif = 6;
}

message GetUtilisateurRequest {
  string id = 1;
}

message GetByKeycloakIdRequest {
  string keycloak_id = 1;
}

message GetByEmailRequest {
  string email = 1;
}

message GetProfileRequest {
  string keycloak_id = 1;
}

message ListUtilisateurRequest {
  string search = 1;
  bool actif = 2;
  Pagination pagination = 3;
}

message ListUtilisateurResponse {
  repeated Utilisateur utilisateurs = 1;
  PaginationResult pagination = 2;
}

message DeleteUtilisateurRequest {
  string id = 1;
}

// ========== AUTH SYNC SERVICE ==========
service AuthSyncService {
  rpc SyncKeycloakUser(SyncKeycloakUserRequest) returns (Utilisateur);
  rpc FindByKeycloakId(GetByKeycloakIdRequest) returns (Utilisateur);
}

message SyncKeycloakUserRequest {
  string sub = 1;
  string email = 2;
  string given_name = 3;
  string family_name = 4;
  string preferred_username = 5;
  string name = 6;
}

// ========== ROLE SERVICE ==========
service RoleService {
  rpc Create(CreateRoleRequest) returns (Role);
  rpc Update(UpdateRoleRequest) returns (Role);
  rpc Get(GetRoleRequest) returns (Role);
  rpc GetByCode(GetRoleByCodeRequest) returns (Role);
  rpc List(ListRoleRequest) returns (ListRoleResponse);
  rpc Delete(DeleteRoleRequest) returns (DeleteResponse);
}

message Role {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateRoleRequest {
  string code = 1;
  string nom = 2;
  string description = 3;
}

message UpdateRoleRequest {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
}

message GetRoleRequest {
  string id = 1;
}

message GetRoleByCodeRequest {
  string code = 1;
}

message ListRoleRequest {
  Pagination pagination = 1;
}

message ListRoleResponse {
  repeated Role roles = 1;
  PaginationResult pagination = 2;
}

message DeleteRoleRequest {
  string id = 1;
}

// ========== PERMISSION SERVICE ==========
service PermissionService {
  rpc Create(CreatePermissionRequest) returns (Permission);
  rpc Update(UpdatePermissionRequest) returns (Permission);
  rpc Get(GetPermissionRequest) returns (Permission);
  rpc GetByCode(GetPermissionByCodeRequest) returns (Permission);
  rpc List(ListPermissionRequest) returns (ListPermissionResponse);
  rpc Delete(DeletePermissionRequest) returns (DeleteResponse);
}

message Permission {
  string id = 1;
  string code = 2;
  string description = 3;
  string created_at = 4;
  string updated_at = 5;
}

message CreatePermissionRequest {
  string code = 1;
  string description = 2;
}

message UpdatePermissionRequest {
  string id = 1;
  string code = 2;
  string description = 3;
}

message GetPermissionRequest {
  string id = 1;
}

message GetPermissionByCodeRequest {
  string code = 1;
}

message ListPermissionRequest {
  Pagination pagination = 1;
}

message ListPermissionResponse {
  repeated Permission permissions = 1;
  PaginationResult pagination = 2;
}

message DeletePermissionRequest {
  string id = 1;
}

// ========== ROLE PERMISSION SERVICE ==========
service RolePermissionService {
  rpc Create(CreateRolePermissionRequest) returns (RolePermission);
  rpc Get(GetRolePermissionRequest) returns (RolePermission);
  rpc ListByRole(ListByRoleRequest) returns (ListRolePermissionResponse);
  rpc Delete(DeleteRolePermissionRequest) returns (DeleteResponse);
}

message RolePermission {
  string id = 1;
  string role_id = 2;
  string permission_id = 3;
  string created_at = 4;
}

message CreateRolePermissionRequest {
  string role_id = 1;
  string permission_id = 2;
}

message GetRolePermissionRequest {
  string id = 1;
}

message ListByRoleRequest {
  string role_id = 1;
  Pagination pagination = 2;
}

message ListRolePermissionResponse {
  repeated RolePermission role_permissions = 1;
  PaginationResult pagination = 2;
}

message DeleteRolePermissionRequest {
  string id = 1;
}

// ========== COMPTE SERVICE ==========
service CompteService {
  rpc Create(CreateCompteRequest) returns (Compte);
  rpc CreateWithOwner(CreateCompteWithOwnerRequest) returns (CompteWithOwner);
  rpc Update(UpdateCompteRequest) returns (Compte);
  rpc Get(GetCompteRequest) returns (Compte);
  rpc List(ListCompteRequest) returns (ListCompteResponse);
  rpc Delete(DeleteCompteRequest) returns (DeleteResponse);
}

message Compte {
  string id = 1;
  string nom = 2;
  string etat = 3;
  string date_creation = 4;
  string created_by_user_id = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CompteWithOwner {
  Compte compte = 1;
  Utilisateur owner = 2;
  MembreCompte membre = 3;
}

message CreateCompteRequest {
  string nom = 1;
  string etat = 2;
  string created_by_user_id = 3;
}

message CreateCompteWithOwnerRequest {
  string nom = 1;
  SyncKeycloakUserRequest keycloak_user = 2;
}

message UpdateCompteRequest {
  string id = 1;
  string nom = 2;
  string etat = 3;
}

message GetCompteRequest {
  string id = 1;
}

message ListCompteRequest {
  string search = 1;
  string etat = 2;
  Pagination pagination = 3;
}

message ListCompteResponse {
  repeated Compte comptes = 1;
  PaginationResult pagination = 2;
}

message DeleteCompteRequest {
  string id = 1;
}

// ========== MEMBRE COMPTE SERVICE ==========
service MembreCompteService {
  rpc Create(CreateMembreCompteRequest) returns (MembreCompte);
  rpc Update(UpdateMembreCompteRequest) returns (MembreCompte);
  rpc Get(GetMembreCompteRequest) returns (MembreCompte);
  rpc ListByOrganisation(ListByOrganisationRequest) returns (ListMembreCompteResponse);
  rpc ListByUtilisateur(ListByUtilisateurRequest) returns (ListMembreCompteResponse);
  rpc Delete(DeleteMembreCompteRequest) returns (DeleteResponse);
}

message MembreCompte {
  string id = 1;
  string organisation_id = 2;
  string utilisateur_id = 3;
  string role_id = 4;
  string etat = 5;
  string date_invitation = 6;
  string date_activation = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CreateMembreCompteRequest {
  string organisation_id = 1;
  string utilisateur_id = 2;
  string role_id = 3;
  string etat = 4;
}

message UpdateMembreCompteRequest {
  string id = 1;
  string role_id = 2;
  string etat = 3;
}

message GetMembreCompteRequest {
  string id = 1;
}

message ListByOrganisationRequest {
  string organisation_id = 1;
  Pagination pagination = 2;
}

message ListByUtilisateurRequest {
  string utilisateur_id = 1;
  Pagination pagination = 2;
}

message ListMembreCompteResponse {
  repeated MembreCompte membres = 1;
  PaginationResult pagination = 2;
}

message DeleteMembreCompteRequest {
  string id = 1;
}

// ========== INVITATION COMPTE SERVICE ==========
service InvitationCompteService {
  rpc Create(CreateInvitationCompteRequest) returns (InvitationCompte);
  rpc Update(UpdateInvitationCompteRequest) returns (InvitationCompte);
  rpc Get(GetInvitationCompteRequest) returns (InvitationCompte);
  rpc GetByToken(GetByTokenRequest) returns (InvitationCompte);
  rpc ListByOrganisation(ListInvitationByOrganisationRequest) returns (ListInvitationCompteResponse);
  rpc Delete(DeleteInvitationCompteRequest) returns (DeleteResponse);
  rpc AcceptInvitation(AcceptInvitationRequest) returns (AcceptInvitationResponse);
}

message InvitationCompte {
  string id = 1;
  string organisation_id = 2;
  string email_invite = 3;
  string role_id = 4;
  string token = 5;
  string expire_at = 6;
  string etat = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CreateInvitationCompteRequest {
  string organisation_id = 1;
  string email_invite = 2;
  string role_id = 3;
  int32 expire_days = 4;
}

message UpdateInvitationCompteRequest {
  string id = 1;
  string role_id = 2;
  string etat = 3;
}

message GetInvitationCompteRequest {
  string id = 1;
}

message GetByTokenRequest {
  string token = 1;
}

message ListInvitationByOrganisationRequest {
  string organisation_id = 1;
  string etat = 2;
  Pagination pagination = 3;
}

message ListInvitationCompteResponse {
  repeated InvitationCompte invitations = 1;
  PaginationResult pagination = 2;
}

message DeleteInvitationCompteRequest {
  string id = 1;
}

message AcceptInvitationRequest {
  string token = 1;
  SyncKeycloakUserRequest keycloak_user = 2;
}

message AcceptInvitationResponse {
  bool success = 1;
  string message = 2;
  MembreCompte membre = 3;
}

// ========== COMMON MESSAGES ==========
message Pagination {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message PaginationResult {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

message DeleteResponse {
  bool success = 1;
}
